# madrona_warp_prototype

./: .gitignore  README.md  pyproject.toml
scripts/: headless.py  rl_cartpole_rlgames.py  rl_cartpole_sb3.py  sim.py  train.py  viewer.py
scripts/assets/: cartpole_dflex.urdf  cartpole_madrona.urdf  cartpole_single.urdf
scripts/cfg/: benchmark.yaml  config.yaml
scripts/cfg/train/PPO/: Ant.yaml  AntClient.yaml  AntTCNN.yaml  Cartpole.yaml  CartpoleCamera.yaml  CartpoleClient.yaml  Humanoid.yaml  HumanoidClient.yaml  HumanoidTCNN.yaml
scripts/cfg/train/SAC/: Ant.yaml  Humanoid.yaml
scripts/cfg/train/SHAC/: Ant.yaml  Humanoid.yaml
scripts/cfg/train/TrajOpt/: Ant.yaml
scripts/utils/: average_meter.py  common.py  dataset.py  env_cartpole_camera_rlgames.py  env_cartpole_rlgames.py  load_utils.py  reformat.py  rlgames_utils.py  scheduler.py  time_report.py  torch_utils.py  wandb_utils.py
scripts/warp_envs/: env_cartpole.py  environment.py  warp_gymnasium.py
src/: CMakeLists.txt  bindings.cpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  sim.inl  types.hpp  viewer.cpp
