[build-system]
requires = []
build-backend = "madrona-py-build"
backend-path = ["external/madrona/py"]

[project]
name = "madrona_warp_proto"
version = "0.0.1"

[tool.madrona.packages.madrona_warp_proto_sim]
ext-only = true
ext-out-dir = "build"

# This module includes the PPO implementation for the training demo
[tool.madrona.packages.madrona_warp_proto_learn]
path = "train_src/madrona_warp_proto_learn"
